feat: add use case create an exam
